--- a/Assets/_PROJECT/Scripts/DoorSystem/DoorSystem.asmdef
+++ b/Assets/_PROJECT/Scripts/DoorSystem/DoorSystem.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "DoorSystem"
+    "name": "DoorSystem",
+    "rootNamespace": "",
+    "references": [
+        "GUID:aa24aeb991ce7404f9d5b5321f558052"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
