--- a/Assets/_PROJECT/Scripts/UI/UI.asmdef
+++ b/Assets/_PROJECT/Scripts/UI/UI.asmdef
@@ -2,7 +2,8 @@
     "name": "UI",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:5347d09fba6efdc42a3b463e3892ce26"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
